--- a/Spec.Sniffer.Model/Spec.Sniffer.Model.csproj
+++ b/Spec.Sniffer.Model/Spec.Sniffer.Model.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="AudioTest.cs" />
     <Compile Include="MicTest.cs" />
+    <Compile Include="NetworkConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
