--- a/Spec.Sniffer.Model/Spec.Sniffer.Model.csproj
+++ b/Spec.Sniffer.Model/Spec.Sniffer.Model.csproj
@@ -76,8 +76,9 @@
       <DependentUpon>WebcamDevice.xaml</DependentUpon>
     </Compile>
     <Compile Include="AudioTest.cs" />
+    <Compile Include="Drivers\Driver.cs" />
+    <Compile Include="Drivers\DriversStatus.cs" />
     <Compile Include="MicTest.cs" />
-    <Compile Include="NetworkConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
