--- a/Spec.Sniffer/Spec.Sniffer.csproj
+++ b/Spec.Sniffer/Spec.Sniffer.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Internet.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\DiagTab.cs" />
     <Page Include="MainWindow.xaml">
