--- a/Spec.Sniffer.Model/Spec.Sniffer.Model.csproj
+++ b/Spec.Sniffer.Model/Spec.Sniffer.Model.csproj
@@ -78,6 +78,7 @@
     <Compile Include="AudioTest.cs" />
     <Compile Include="Drivers\Driver.cs" />
     <Compile Include="Drivers\DriversStatus.cs" />
+    <Compile Include="Internet.cs" />
     <Compile Include="MicTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
